ProjetCompil/Verif/Test/fail/typeNonCompatible9.cas
program
	A : array [1..14] of boolean;
	B : 1..15;
	C : boolean;
begin
	C := B < A;
end.
	
